fix table font-size for the too big content

--- a/www/Themes/Generic-theme/style.css
+++ b/www/Themes/Generic-theme/style.css
@@ -1847,7 +1847,7 @@ td, a.infobulle:hover td {
 #Tcontener,#Tmainpage,#tabLegend,div.tab,.Tmenu3 .center,.ListTable {width:100%;}
 
 .ListTable {
-
+font-size: 12px;
 }
 
 #Tmainpage {
